--- a/_config.yml
+++ b/_config.yml
@@ -183,6 +183,12 @@ yat:
 # Pagination setting
 # paginate: 5
 
+# Photo previewer settings
+# photo_previewer:
+#   photo_selectors: "section.main"  # Preview specified areas of photos by CSS selectors (It also can be an array)
+#   photo_scale: 2            # Adjust the preview scale of photos
+#   background_opacity: 0.85  # Background backdrop opacity
+
 # Disqus comments
 # disqus:
 #   shortname: "Your Disqus username"
