--- a/_config.yml
+++ b/_config.yml
@@ -156,13 +156,20 @@ yat:
 # use. This setting affects both Markdown code blocks and Liquid `highlight`
 # blocks. You can set it to `none` to disable highlighting.
 #
-# By default, we highlight code with Rouge's "github.light" theme. If you want
-# to change that, you can override `assets/css/code-highlight-rouge.css` with a
-# different stylesheet generated with Rouge's `rougify` command. If you do so,
-# you must set the CSS scope to `.highlight pre` for proper rendering:
+# By default, we highlight code with Rouge's "github.light" and `github.dark`
+# themes for light and dark mode, respectively. If you want to change that, you
+# can override `assets/css/code-highlight-rouge.css` with a different
+# stylesheet generated with Rouge's `rougify` command. If you do so, you must
+# set the CSS scope to `.highlight pre` for your light-mode theme:
 #
 #   $ mkdir -p assets/css
 #   $ bundle exec rougify style --scope '.highlight pre' <THEME> >assets/css/code-highlight-rouge.css
+#
+# ...and to `html[data-theme="dark"] .highlight pre` for your dark-mode theme.
+# A dark-mode theme is optional, but if you want one just append its stylesheet
+# to the same CSS file (note the >>):
+#
+#   $ bundle exec rougify style --scope 'html[data-theme="dark"] .highlight pre' <DARK_THEME> >>assets/css/code-highlight-rouge.css
 # highlighter: rouge
 
 # If you want to link only specific pages in your header, uncomment
