--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "myblog"
-  subheading: "Your awesome subheading"
-  banner: "Your image ur"
+  heading: "DragonK's Blog"
+  subheading: "Step far."
+  banner: "Your image url"
