--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@
 
 title: Cheon Hyeonjin
 email: hyeonjinc@gmail.com
-author: cammucat
+author: HyeonjinCheon
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
