--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
+  heading: "Yet Another TurtleBot"
+  subheading: "Two-wheeled mobile robot based on SoC Zynq 7000"
   banner: "Your image url"
