--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
+  heading: "Welcome to my crib"
+  subheading: "It needs a makeover"
   banner: "/assets/images/banners/landscape.jpg"
