--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Welcome to my crib"
-  subheading: "It needs a makeover"
+  heading: "Bailey Mauss"
+  subheading: "Interested in data and the world that creates it"
   banner: "/assets/images/banners/landscape.jpg"
