--- a/_config.yml
+++ b/_config.yml
@@ -43,9 +43,7 @@ author: Bailey Mauss
 copyright: "Copyright (cleft) 2017-{currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal website for Bailey Mauss. Blog about tech and learning.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. https://example.com
@@ -55,6 +53,8 @@ favicon: "" # the favicon for your site
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 yat:
   date_format: "%b %d, %Y"
+
+future: true
 
 # If you want more debug log, you can set true
 # debug: false
