feat: change link to inner folder

--- a/_config.yml
+++ b/_config.yml
@@ -173,7 +173,7 @@ header_pages:
 
 header_ext_links:
   - title: photo
-    url: https://cloud.seoklab.org:999
+    url: https://cloud.seoklab.org:999/#/shared_space/folder/107
   - title: GalaxyWeb
     url: https://galaxy.seoklab.org
   - title: github
