--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@domain.com
-author: GitHub User
+title: MOBILTECH
+email: shinmyeongho@mobiltech.io
+author: shinmyeongho
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -40,12 +40,9 @@ author: GitHub User
 #   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
 #
-copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
+copyright: "Unpublished Work (cleft) 2024-{currentYear} {author}"
 
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: >- 작성한 소프트웨어 메뉴얼을 공유하고 모으기 위한 사이트입니다.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://sky-sand/GIS.github.io" # the base hostname & protocol for your site, e.g. https://example.com
