--- a/_config.yml
+++ b/_config.yml
@@ -42,9 +42,9 @@ author: GitHub User
 #
 copyright: "qrfont (cleft) 2024-{currentYear} {author}"
 
-description: >- # web generator
+description: # web generator
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://qrfont.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 favicon: "/assets/images/banners/qrfont.png" # the favicon for your site
 
