--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "Web Images Generator"
   subheading: ""
-  banner: "Http://qrfont.github.io"
+  banner: "Http://qrfont.github.io/assets/images/banners/"
