feat: Intialized website template and saved conda dependencies

--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@domain.com
-author: GitHub User
+title: IEEE CIS UPRM
+email: cis@uprm.edu
+author: cisuprm
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -249,3 +249,5 @@ plugins:
   - jekyll-sitemap
   - jekyll-paginate
   - jekyll-spaceship
+
+theme: jekyll-theme-yat
