feat: changed website color to cis branding colors

--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
-  banner: "Your image url"
+  heading: "IEEE Computational Intelligence Society Student Branch Chapter"
+  subheading: "University of Puerto Rico at Mayagüez"
+  # banner: "Your image url"
